review-page made

--- a/styles/song.css
+++ b/styles/song.css
@@ -18,7 +18,7 @@
 }
 
 .song-preview-recommended{
-  background-color: rgb(232,244,228);
+  background-color: rgb(206, 255, 253);
 }
 .song-preview-recommended:hover{
   opacity: 0.8;
